fix z-index of background img

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ a:hover {
   position: absolute;
   right: -15rem;
   bottom: -4rem;
-  z-index: 2;
+  z-index: 1;
 }
 
 .brand {
